@@ -1,3 +1,8 @@
+2014-06-25  Benno Schulenberg  <bensberg@justemail.net>
+	* src/browser.c (do_browser): Allow 'firstfile' and 'lastfile' to be
+	rebound to Ctrl keys -- checking meta_key is wrong, the function has
+	already been determined, that is all that matters.
+
 2014-06-23  Benno Schulenberg  <bensberg@justemail.net>
 	* src/nano.h, src/move.c (do_up, do_down), src/winio.c (edit_scrol):
 	Rename UP_DIR and DOWN_DIR to UPWARD and DOWNWARD, for clarity.
